@@ -1,20 +1,16 @@
-"""
-Mail related doctests
-"""
-
+import doctest
 import unittest
-from zope.testing import doctest
 
-from Testing.ZopeTestCase import FunctionalDocFileSuite
-from Products.CMFPlone.tests import PloneTestCase
-
-from Acquisition import aq_base
 from zope.component import getSiteManager
+from Acquisition import aq_base
 from Products.MailHost.interfaces import IMailHost
+from Testing.ZopeTestCase import FunctionalDocFileSuite
+
+from Products.CMFPlone.tests import PloneTestCase
 from Products.CMFPlone.tests.utils import MockMailHost
 
-OPTIONFLAGS = (doctest.ELLIPSIS |
-               doctest.NORMALIZE_WHITESPACE)
+OPTIONFLAGS = (doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE)
+
 
 class MockMailHostTestCase(PloneTestCase.FunctionalTestCase):
 
@@ -29,7 +25,8 @@ class MockMailHostTestCase(PloneTestCase.FunctionalTestCase):
         self.portal.MailHost = self.portal._original_MailHost
         sm = getSiteManager(context=self.portal)
         sm.unregisterUtility(provided=IMailHost)
-        sm.registerUtility(aq_base(self.portal._original_MailHost), provided=IMailHost)
+        sm.registerUtility(aq_base(self.portal._original_MailHost),
+                           provided=IMailHost)
 
 
 def test_suite():
